# CommonAPI

./: reset_hard.sh
sourcecode/: CMakeLists.txt
sourcecode/src/: HelloWorldClient.cpp  HelloWorldService.cpp
sourcecode/src-gen/: .gitignore  Makefile
tools/CommonAPI/: Makefile  clean.sh
